# Game-Pacman

./: .gitignore  CMakeLists.txt  Makefile  README.md  jeu.h  main.cpp  pacmanwindow.cpp
data/niveau/: niveau_defaut.txt  niveau_test_gagner.txt
include/: pacmanwindow.h
src/: jeu.cpp
